--- a/SpaceInvaders.Server/SpaceInvaders.Api/SpaceInvaders.Api.csproj
+++ b/SpaceInvaders.Server/SpaceInvaders.Api/SpaceInvaders.Api.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Hubs\ChatHub.cs" />
     <Compile Include="Hubs\DiagHub.cs" />
     <Compile Include="Hubs\GamePlayHub.cs" />
     <Compile Include="Models\SpaceShip.cs" />
