--- a/SpaceInvaders.Api/SpaceInvaders.Api.csproj
+++ b/SpaceInvaders.Api/SpaceInvaders.Api.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Hubs\ChatHub.cs" />
     <Compile Include="Hubs\DiagHub.cs" />
     <Compile Include="Hubs\GameHub.cs" />
+    <Compile Include="Models\ChatMessage.cs" />
     <Compile Include="Models\SpaceShip.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
