--- a/SpaceInvaders.Website/SpaceInvaders.Website.csproj
+++ b/SpaceInvaders.Website/SpaceInvaders.Website.csproj
@@ -316,7 +316,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>65101</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:90/</IISUrl>
+          <IISUrl>http://localhost:90/SpaceInvaders.Website</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
