--- a/SpaceInvaders.Api/SpaceInvaders.Api.csproj
+++ b/SpaceInvaders.Api/SpaceInvaders.Api.csproj
@@ -127,7 +127,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Hubs\AuthHub.cs" />
+    <Compile Include="Hubs\UserHub.cs" />
     <Compile Include="Hubs\ChatHub.cs" />
     <Compile Include="Hubs\DiagHub.cs" />
     <Compile Include="Hubs\GameHub.cs" />
